
+---------------------------+
| KNOWN BUGS                |
+---------------------------+

	* CRYTICAL warning when unloading the plugin
		"CRITICAL	: g_object_ref: assertion `object->ref_count > 0' failed"
	(FIXED) Double click on bookmarks, do nothing
	(FIXED) show/hide hidden files not working on Windows
	(FIXED) "Go Up" not working if the current path ends with slash


+---------------------------+
| TODO                      |
+---------------------------+

	(DONE) codestyle improve to be same as other parts as geany`s
	(DONE) configuration dialog
	(DONE) tracking path to current focused document (work only for refreshed directories)
	* Better tracking for files, open path to them
	* In windows can choice between devices (C:\, D:\,...)
	* Language files
	(DONE) Saving state of Showbars in config file everytime where is changed
	(DONE) oneclick document opening
	(DONE) filter separating ex.: "*.c;*.cpp;*.h"
	* Fix possible memory leaks (using g_free... where is need)
	* Folowing path from current document view
	(DONE) Hide object files as native filebroser (*.o;*.a;*.so;*.dll;*.lib..)
	(DONE) Using font from geany settings for sidebar
	* Migrating to stash
	* Adding keybindings for renaming/deleting/refreshing
	* Add option to change bars position
	* Add option to autorename the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+

25-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Menu elements are inactive instands of hidden
		Added experimental bookmarks view
		Added option to show/hide tree lines
		Added option to copy the uri into clipboard
		Added option to search into the view by the name // thanks to native filebrowser
		Added tooltips with uri // thanks to native filebrowser
		Added option to open terminal
		Applied patch from Enrico to fix gtk+-2.8 compitable for tree lines